# c2pa-viewer

./: .dockerignore  .gitignore  API_ENDPOINTS.md  Dockerfile  LICENSE.md  README.md  WARP.md  api.py  extract_c2pa.py  extract_c2pa_thumbnails.py  fly.toml  index.html  pyproject.toml  script.js  server.py  styles.css  test_server.py
archive/: README.md  api.py  extract_c2pa.py  extract_c2pa_improved.py  extract_c2pa_thumbnails.py  extract_metadata.py
